Name:         redstone
Version:      0.0.1
Author:       Johan Kiviniemi
License-File: COPYING
Synopsis:     Bindings for libredstone, a library for interfacing with
              Minecraft file formats and protocols
Homepage:     https://github.com/ion1/redstone-haskell
Category:     Data

Cabal-Version: >= 1.9.2
Build-Type:    Simple

Source-Repository head
  Type:     git
  Location: git://github.com/ion1/redstone-haskell.git

Library
  Exposed-Modules: Redstone.Compression,
                   Redstone.Error,
                   Redstone.Prim.Compression,
                   Redstone.Prim.Memory
  Build-Depends:   base == 4.*,
                   bindings-DSL == 1.0.*,
                   bytestring == 0.9.*
  Extra-Libraries: redstone
  GHC-Options:     -Werror -Wall

Test-Suite test-redstone
  Type:            exitcode-stdio-1.0
  Main-Is:         RunTests.hs
  Build-Depends:   base == 4.*,
                   bytestring == 0.9.*,
                   QuickCheck == 2.4.*,
                   redstone,
                   test-framework == 0.4.*,
                   test-framework-th == 0.2.*,
                   test-framework-quickcheck2 == 0.2.*
  GHC-Options:     -Werror -Wall
